done all elements location

--- a/index.html
+++ b/index.html
@@ -59,32 +59,32 @@
         </div>
       </section>
       <!--advantages-->
-      <section class="advantages">
-        <div>
-          <h2>Advantages</h2>
-          <ul>
-            <li>
+      <section class="section advantages">
+        <div class="container">
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="advantages-list">
+            <li class="advantages-li">
               <h3 class="adv-title">Strategy</h3>
               <p class="adv-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advantages-li">
               <h3 class="adv-title">Punctuality</h3>
               <p class="adv-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advantages-li">
               <h3 class="adv-title">Diligence</h3>
               <p class="adv-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-li">
               <h3 class="adv-title">Technologies</h3>
               <p class="adv-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -95,16 +95,17 @@
         </div>
       </section>
       <!--team-->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <ul>
+          <ul class="team-list">
             <li class="team-card">
               <img
                 src="./images/team/img-1.jpg"
                 alt="a smiling man with a beard, mustache, black hair, brown eyes, in a blue shirt"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="names">Mark Guerrero</h3>
               <p class="work">Product Designer</p>
@@ -115,6 +116,7 @@
                 alt="a grinning man with moustache, small beard, brown hair, brown eyes in blue shirt"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="names">Tom Ford</h3>
               <p class="work">Frontend Developer</p>
@@ -125,6 +127,7 @@
                 alt="a smiling girl with long brown hair, brown eyes, pearl earrings in a bright pink sweater"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="names">Camila Garcia</h3>
               <p class="work">Marketing</p>
@@ -135,6 +138,7 @@
                 alt="a grinning man with stubble, brown hair, brown eyes in a gray t-shirt"
                 width="264"
                 height="260"
+                class="team-img"
               />
               <h3 class="names">Daniel Wilson</h3>
               <p class="work">UI Designer</p>
@@ -143,10 +147,10 @@
         </div>
       </section>
       <!--portfolio-->
-      <section>
+      <section class="section portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul>
+          <ul class="portfolio-list">
             <li>
               <img
                 src="./images/portfolio/img-1-1.jpg"
@@ -154,8 +158,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Banking App</h3>
-              <p class="type-of-examples">App</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Banking App</h3>
+                <p class="type-of-examples">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -164,8 +170,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Cashless Payment</h3>
-              <p class="type-of-examples">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Cashless Payment</h3>
+                <p class="type-of-examples">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -174,8 +182,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Meditation App</h3>
-              <p class="type-of-examples">App</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Meditation App</h3>
+                <p class="type-of-examples">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -184,8 +194,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Taxi Service</h3>
-              <p class="type-of-examples">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Taxi Service</h3>
+                <p class="type-of-examples">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -194,8 +206,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Screen Illustrations</h3>
-              <p class="type-of-examples">Design</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Screen Illustrations</h3>
+                <p class="type-of-examples">Design</p>
+              </div>
             </li>
             <li>
               <img
@@ -204,8 +218,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="examples-names">Online Courses</h3>
-              <p class="type-of-examples">Marketing</p>
+              <div class="portfolio-content">
+                <h3 class="examples-names">Online Courses</h3>
+                <p class="type-of-examples">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -214,12 +230,12 @@
     <!--footer-->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo footer-logo"
           >Web<span class="footer-studio">Studio</span></a
         >
         <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
+          Increase the flow of customers and<br />for your business with
+          digital<br />marketing & growth solutions.
         </p>
       </div>
     </footer>
