add portfolio list width calculation

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-1-1.jpg"
                 alt="Mobile banking app interface with a purple design"
@@ -163,7 +163,7 @@
                 <p class="type-of-examples">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-2-1.jpg"
                 alt="Smartphone scanning a QR code for cashless payment near a terminal"
@@ -175,7 +175,7 @@
                 <p class="type-of-examples">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-3-1.jpg"
                 alt="Laptop and smartphone displaying a meditation app with the text 'Return to normalcy'"
@@ -187,7 +187,7 @@
                 <p class="type-of-examples">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-4-1.jpg"
                 alt="Hand on a car steering wheel with a phone mounted for taxi service use"
@@ -199,7 +199,7 @@
                 <p class="type-of-examples">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-5-1.jpg"
                 alt="Mobile screens with fantasy-style illustrations and a moonlit landscape"
@@ -211,7 +211,7 @@
                 <p class="type-of-examples">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-elements">
               <img
                 src="./images/portfolio/img-6-1.jpg"
                 alt="Smiling young woman in an orange sweater and beanie holding a smartphone outdoors"
