modify the whole project

--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="names">Mark Guerrero</h3>
-              <p class="work">Product Designer</p>
+              <div class="name-and-job-container">
+                <h3 class="names">Mark Guerrero</h3>
+                <p class="work">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -118,8 +120,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="names">Tom Ford</h3>
-              <p class="work">Frontend Developer</p>
+              <div class="name-and-job-container">
+                <h3 class="names">Tom Ford</h3>
+                <p class="work">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -129,8 +133,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="names">Camila Garcia</h3>
-              <p class="work">Marketing</p>
+              <div class="name-and-job-container">
+                <h3 class="names">Camila Garcia</h3>
+                <p class="work">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -140,8 +146,10 @@
                 height="260"
                 class="team-img"
               />
-              <h3 class="names">Daniel Wilson</h3>
-              <p class="work">UI Designer</p>
+              <div class="name-and-job-container">
+                <h3 class="names">Daniel Wilson</h3>
+                <p class="work">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
